--- a/kontakt.qmd
+++ b/kontakt.qmd
@@ -19,7 +19,13 @@ Poniżej znajdują się informacje kontaktowe i wiele więcej na temat każdego 
 
 ## Tomasz Golecki
 
-![](images/korepetycje_wizytówka_przód.png){fig-align="center"}
+::: {style="margin:0; padding:0;"}
+![![](images/clipboard-3609703868.png){style="margin:0; padding:0;"}](images/Mandatory-01.png){style="margin:0; padding:0;" fig-align="center"}
+
+![](images/Contents Page.png){style="margin:0; padding:0;" fig-align="center"}
+
+![](images/Mandatory-02.png){style="margin:0; padding:0;" fig-align="center"}
+:::
 
 ## Tomasz Hanusek
 
