--- a/dane.qmd
+++ b/dane.qmd
@@ -20,6 +20,7 @@ library(skimr)
 library(knitr)
 library(tidyverse)
 library(corrplot)
+library(ggcorrplot)
 library(ggthemes)
 library(hrbrthemes)
 library(kableExtra)
@@ -280,6 +281,7 @@ Ze względu na typy zmiennych oraz rozkłady, jakimi te zmienne się charakteryz
 **Uzasadnienie:** `pmm` zachowuje rozkłady i wybiera realne obserwacje jako wartości wejściowe, co jest szczególnie ważne przy zmiennych o rozkładzie ciągłym. Dla zmiennych kategorycznych używamy odpowiednich regresji klasyfikacyjnych w zależności od cech zmiennej.
 
 ```{r}
+#| output: false
 statystyki_przed <- describe(badania[NA_count$var])
 metody <- make.method(badania)
 
@@ -295,7 +297,6 @@ uzupelnienia <- mice(badania,
                 method = metody,
                 seed = 2025)
 badania <- complete(uzupelnienia)
-
 statystyki_po <- describe(badania[NA_count$var])
 
 ```
@@ -306,19 +307,25 @@ Po uzupełnieniu brakujących wartości porównajmy statystyki dla naszych zmien
 #### Przed uzupełnieniem danych
 
 ```{r}
-data.frame(statystyki_przed)
+round(data.frame(t(statystyki_przed))[c(2:9,10:12), ], 3)
 ```
 
 #### Po uzupełnieniu danych
 
 ```{r}
-data.frame(t(statystyki_po))
+round(data.frame(t(statystyki_po))[c(2:8,10:12), ], 3)
 ```
 :::
 
-### Wizualizacja danych
+Sprawdzając podstawowe statystki widzimy, że uzupełniając dane zachowaliśmy ich strukturę. Różnica pomiędzy wartościami statystyk polega najczęściej na zmianie części tysięcznych lub setnych, więc wartości `NA` zostały bardzo dobrze odwzorowane. Teraz możemy zrobić analizę wstępną naszego zbioru danych, aby następnie przejść do stworzenia modeli predykcyjnych oraz głębszej analizy.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum sapien sit amet diam tristique, sed placerat ante hendrerit. Vestibulum ut leo vitae turpis consequat lobortis. Praesent ultricies ligula lorem, vel feugiat elit finibus sit amet. Nam placerat rhoncus tellus, sit amet condimentum mi. Pellentesque vitae justo dolor. Pellentesque et mi enim. Cras maximus elit vitae dictum egestas. Proin laoreet velit nibh, quis interdum leo efficitur vitae. Duis placerat malesuada vehicula. Ut at eros sit amet sem dictum fringilla quis.
+### Wstępna Analiza
+
+#### Statystyki
+
+```{r}
+
+```
 
 #### Funkcja tworzenia wykresów
 
@@ -339,10 +346,12 @@ zmienna_wykres <- function(dane, typ_zmiennej, typ_wykresu) {
   for (i in 1:ncol(dane)) {
     kolumna <- colnames(dane)[i]
     if (typ_wykresu == "barplot") {
-    p <- ggplot(dane, aes(x = !!sym(kolumna))) +
-      geom_bar(fill = "steelblue") +
+    p <- ggplot(dane, aes(x = !!sym(kolumna), fill = !!sym(kolumna))) +
+      geom_bar(show.legend = FALSE) +
       theme_ipsum() +
-      ggtitle(kolumna)
+      ggtitle(kolumna) +
+      scale_fill_manual(values = c("#6AAED9", "#F2A391", "#2C5DBF", "#F25041"))
+      
     
     } else if (typ_wykresu == "pie") {
       p <- dane %>%
@@ -351,19 +360,22 @@ zmienna_wykres <- function(dane, typ_zmiennej, typ_wykresu) {
         geom_bar(stat = "identity", width = 1, color = "white") +
         coord_polar(theta = "y") +
         theme_void() +
-        ggtitle(kolumna)
+        ggtitle(kolumna) +
+        scale_fill_manual(values = c("#6AAED9", "#F2A391", "#2C5DBF", "#F25041"))
       
     } else if (typ_wykresu == "histogram") {
       p <- ggplot(dane, aes(x = !!sym(kolumna))) +
-        geom_histogram(fill = "darkorange", bins = 20) +
+        geom_histogram(bins = 20, show.legend = FALSE, fill = "#6AAED9") +
         theme_ipsum() +
         ggtitle(kolumna)
+        
       
     } else if (typ_wykresu == "violin") {
-      p <- ggplot(dane, aes(x = "", y = !!sym(kolumna))) +
-        geom_violin(fill = "lightgreen") +
+      p <- ggplot(dane, aes(x = "", y = !!sym(kolumna), fill = "#6AAED9")) +
+        geom_violin(show.legend = FALSE) +
         theme_ipsum() +
-        ggtitle(kolumna)
+        ggtitle(kolumna) +
+        scale_fill_manual(values = c("#6AAED9", "#F2A391", "#2C5DBF", "#F25041"))
     } else {
       next  # pomiń jeśli nieznany typ wykresu
     }
@@ -378,7 +390,21 @@ ggsave(paste0("images/plots/", typ_zmiennej, "_", typ_wykresu, "2.png"), gotowy_
 }
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum sapien sit amet diam tristique, sed placerat ante hendrerit. Vestibulum ut leo vitae turpis consequat lobortis. Praesent ultricies ligula lorem, vel feugiat elit finibus sit amet. Nam placerat rhoncus tellus, sit amet condimentum mi. Pellentesque vitae justo dolor.
+Tak zbudowana funkcja pozwala nam na generowanie wykresów w zależności od:
+
+-   Typu zmiennej
+
+-   Typu wykresu
+
+Dzięki temu możemy szybko i prosto uzyskać wiele wizualizacji na temat interesujących nas zmiennych. Zdecydowaliśmy się przedstawić nasze zmienne z podziałem na:
+
+1.  Zmienne typu kategorycznego, przedstawiając liczebność ogólną oraz względem siebie, za pomocą wykresów `barplot` oraz `pie`.
+
+<!-- -->
+
+2.  Zmienne typu numerycznego, przedstawiając gęstośc oraz rozkład zmiennej, za pomocą wykresów `violin` oraz `histogram`
+
+Poniżej przedstawiamy efekty naszej pracy, gdzie przeanalizujemy poszczególne zmienne.
 
 #### Zmienne Kategoryczne
 
@@ -401,9 +427,19 @@ zmienna_wykres(badania, "kategoryczna", "pie")
 ![](images/plots/kategoryczna_pie2.png){fig-align="center"}
 :::
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius non lacus eget pellentesque. Morbi sed nunc vel est interdum tempus eget vel felis. Morbi posuere mattis magna, et ornare lacus gravida sed. Nullam nulla mauris, aliquam et faucibus quis, ultrices id nisl. Quisque eu dolor at odio vulputate hendrerit. Morbi ut fringilla eros, ac dapibus velit. Aenean facilisis lacinia facilisis. Morbi ultricies urna a nibh molestie gravida. Aenean et tincidunt tortor. Sed ut nisi lacinia, volutpat ipsum quis, tristique ligula.
+Po przeanalizowaniu wykresów nasuwają się nastepujące wnioski:
 
-Donec bibendum, erat quis scelerisque placerat, urna erat suscipit elit, a semper lorem ex sit amet sem. Pellentesque accumsan, turpis non dapibus aliquet, nisi erat maximus ex, at scelerisque lorem dolor a turpis. Aliquam volutpat eros sit amet iaculis ultrices. Ut diam ipsum, ultrices vel dolor egestas, rhoncus fringilla.
+-   Analizujemy zbiór ponad 4.000 osób, w którym kobiety lekko przewyższają swoją liczebnością mężczyzn.
+
+-   Wraz z poziomem wykształcenia zmniejsza się liczba osób w danej kategorii wykształcenia. Osób bez ukończonej szkoły średniej jest około 1750, stopniowo zmniejszając się do 500 osób z wykształceniem wyższym. Wśród naszych danych przeważają osoby bez wykształcenia lub jedynie z wykształceniem średnim.
+
+-   Podział na osoby palące i niepalące jest jednakowy. Obie grupy zawierają około 2.000 osób.
+
+-   Grupy osób w których skład wchodzą osoby z cukrzycą, osoby leczące nadciśnienie krwi oraz osoby, które przeżyły udar mózgu są bardzo nieliczne. Ograniczają się maksymalnie do kilkudziesięciu osób. Mimo wszystko osoby te mogą dostarczyć wiele cennych informacji w dalszej analizie ryzyka choroby serca.
+
+-   Bazujemy na danych w których stosunek liczby osób, u których nie występowało nadciśnienie do liczby osób u których nadciśnienie występowało jest równe w przybliżeniu 2:1.
+
+-   Zmienna predykcyjna `TenYearCHD` przewiduje potencjalne ryzyko choroby serca dla ponad 500 osób, co stanowi około 12.5% liczby wszystkich badanych. Oznacza to, że średnio co 8 badana osoba jest kwalifikowana w grupie ryzyka.
 
 #### Zmienne Numeryczne
 
@@ -426,10 +462,94 @@ zmienna_wykres(badania, "numeryczna", "histogram")
 ![](images/plots/numeryczna_histogram2.png){fig-align="center"}
 :::
 
-Morbi posuere mattis magna, et ornare lacus gravida sed. Nullam nulla mauris, aliquam et faucibus quis, ultrices id nisl. Quisque eu dolor at odio vulputate hendrerit. Morbi ut fringilla eros, ac dapibus velit. Aenean facilisis lacinia facilisis. Morbi ultricies urna a nibh molestie gravida. Aenean et tincidunt tortor. Sed ut nisi lacinia, volutpat ipsum quis, tristique ligula.
+Po przeanalizowaniu wykresów nasuwają się nastepujące wnioski:
+
+-   Badamy grupę osób, w której większość osób ma od 35 do 65 lat.
+
+-   Ciśnienie rozkurczowe zawiera się głównie w przedziale \<70; 90\> natomiast ciśnienie skurczowe w przedziale \<115; 140\>
+
+-   Najczęściej badane osoby posiadają tętno serca na poziomie 70-80 uderzeń na minutę.
+
+-   Interesujący jest rozkład zmiennej `cigsPerDay`. Widać znaczący wzrost wystąpień osób palących 20 papierosów dziennie. Dokładnie taka liczba papierosów znajduje się w pojedyńczej paczce. Możemy zatem przyjąć, że dla wielu osób codziennym nawykiem jest wypalenie dokładnie całej paczki w trakcie dnia.
+
+-   Zmienne cechują się niesymetrycznym rozkładem, dodatkowo zaburzone są rozkłady dla zmiennej `age` oraz `cigsPerDay`.
+
+-   Większość zmiennych jest prawostronnie asymetryczna, ciężko mówić o normalności rozkładów ze względu na obecność wartości odstających, które są powszechne wśród danych medycznych.
+
+#### Zależności pomiędzy zmiennymi
+
+Wśród naszych zmiennych mogą istnieć zależności liniowe. W celu sprawdzenia tego faktu stworzymy macierz korelacji, aby przedstawić jak wygląda korelacja pomiędzy poszczególnymi zmiennymi. Posłużymy się w tym celu zmiennymi numerycznymi.
 
 ```{r}
-skim(badania)
+cor_mat <- badania %>% 
+  select(where(is.numeric)) %>% 
+  cor()
+
+p <- ggcorrplot(
+    cor_mat,
+    lab = TRUE,               
+    type = "lower",           
+    hc.order = TRUE,          #
+    outline.col = "white",
+    ggtheme = ggplot2::theme_minimal(),
+    colors = c("#6AAED9", "white", "#F25041") 
+)
+ggsave("images/plots/macierz_korelacji.jpg", p)
+```
+
+![](images/plots/macierz_korelacji.jpg){fig-align="center"}
+
+Widzimy, że istnieje duża korelacja równa 0.78 pomiędzy zmiennymi `sysBP` oraz `diaBP`. Nie powinno nas to specjalnie dziwić, ponieważ wartość ciśnienia rozkurczowego ma bezpośredni wypływ na wartość ciśnienia skurczowego. Dodatkowo poziom BMI a co za tym idzie - nasza waga ma wpływ na wartośc ciśnienia rozkurczowego oraz skurczowego. W oczy może rzucić nam się również wartość korelacji na poziomie -0.19 między zmienną `age` oraz `cigsPerDay`, która oznacza, że wraz z wiekiem palimy coraz mniej papierosów dziennie. Nie są to jednak wysokie wartości współczynnika korelacji, więc nie możemy powiedzieć, że pomiędzy tymi zmiennymi istnieje statystycznie istotna korelacja. Możemy jedna informacje traktować jako wskazówki podczas dalszej analizy i zgłębić analizę w kierunku tych zmiennych.
+
+#### Relacja pomiędzy `diaBP` oraz `sysBP`
+
+Sprawdźmy jak będzie wyglądać zestawienie wartości ciśnienia skurczowego od wartości ciśnienia rozkurczowego, dodatkowo dodamy kilka czynników, które dotakowo pokażą zależności pomiędzy większą liczbą zmiennych.
+
+```{r}
+p1 <- ggplot(badania, aes(x = diaBP, y = sysBP, color = sex, shape = sex)) +
+  geom_point() +
+  theme_ipsum() +
+  ggtitle("sysBP ~ diaBP") +
+  scale_color_manual(values = c("#6AAED9", "#F2A391", "#2C5DBF", "#F25041")) +
+  theme(legend.position = "bottom")
+
+p2 <- ggplot(badania, aes(x = diaBP, y = sysBP, color = education, shape = education)) +
+  geom_point() +
+  theme_ipsum() +
+  ggtitle("sysBP ~ diaBP") +
+  scale_color_manual(values = c("#6AAED9", "#F2A391", "#2C5DBF", "#F25041")) +
+  theme(legend.position = "bottom")
+
+p3 <- ggplot(badania, aes(x = diaBP, y = sysBP, color = currentSmoker, shape = currentSmoker)) +
+  geom_point() +
+  theme_ipsum() +
+  ggtitle("sysBP ~ diaBP") +
+  scale_color_manual(values = c("#6AAED9", "#F2A391", "#2C5DBF", "#F25041")) +
+  theme(legend.position = "bottom")
+
+ggsave("images/plots/sysBP_diaBP_bySex.jpg", p1)
+ggsave("images/plots/sysBP_diaBP_byEducation.jpg", p2)
+ggsave("images/plots/sysBP_diaBP_byCurrentSmoker.jpg", p3)
+```
+
+::: panel-tabset
+### f
+
+![](images/plots/sysBP_diaBP_bySex.jpg){fig-align="center"}
+
+### fg
+
+![](images/plots/sysBP_diaBP_byEducation.jpg){fig-align="center"}
+
+### ghj
+
+![](images/plots/sysBP_diaBP_byCurrentSmoker.jpg){fig-align="center"}
+:::
+
+### Relacja pomiędzy zmienną `age`, a zmienną `cigsPerDay`
+
+```{r}
+
 ```
 
 <div>
