--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ library(knitr)
 library(tidyverse)
 library(corrplot)
 library(ggthemes)
-library(hrbrthemes)
+library(tinythemes)
 library(kableExtra)
 library(rlang)
 library(gridExtra)
